Fixed svgBarChart click

--- a/src/vois/svgUtilsTest.ipynb
+++ b/src/vois/svgUtilsTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb817371",
+   "id": "9dcdfe65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +21,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9e219e9f",
+   "execution_count": 12,
+   "id": "ddd3abe6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9e6f21e267bc4320bf5b55223699f260",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<svg xmlns:svg=\"http://www.w3.org/2000/svg\" xmlns=\"http://www.w3.org/2000/svg\" width=\"240\" heigh…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -56,10 +71,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "72739a42",
+   "execution_count": 51,
+   "id": "68dfe148",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3dd85314cb18423897acbd1df767e8c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<svg xmlns:svg=\"http://www.w3.org/2000/svg\" xmlns=\"http://www.w3.org/2000/svg\" width=\"340\" heigh…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -87,10 +117,313 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "982a931d",
+   "execution_count": 47,
+   "id": "98ee5a9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iso2code</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LV</td>\n",
+       "      <td>16.762870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>96.941807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CH</td>\n",
+       "      <td>75.718698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AT</td>\n",
+       "      <td>22.460845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HR</td>\n",
+       "      <td>95.490728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ES</td>\n",
+       "      <td>83.668586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>IS</td>\n",
+       "      <td>94.655129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>RO</td>\n",
+       "      <td>16.668187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>IT</td>\n",
+       "      <td>73.774581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>VA</td>\n",
+       "      <td>73.399901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>HU</td>\n",
+       "      <td>62.612240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>SE</td>\n",
+       "      <td>36.068189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>NL</td>\n",
+       "      <td>77.763494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>CZ</td>\n",
+       "      <td>77.350419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>DE</td>\n",
+       "      <td>72.317040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>FR</td>\n",
+       "      <td>80.140088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>ME</td>\n",
+       "      <td>24.170847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>BE</td>\n",
+       "      <td>61.728515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>SI</td>\n",
+       "      <td>23.075096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>LU</td>\n",
+       "      <td>23.483478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>IE</td>\n",
+       "      <td>74.193761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>BA</td>\n",
+       "      <td>48.561480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>MC</td>\n",
+       "      <td>5.172593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>BG</td>\n",
+       "      <td>75.725394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>PL</td>\n",
+       "      <td>84.294687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>LI</td>\n",
+       "      <td>35.058630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>GB</td>\n",
+       "      <td>33.257140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>RS</td>\n",
+       "      <td>20.258863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>SM</td>\n",
+       "      <td>72.294392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>DK</td>\n",
+       "      <td>38.316090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>IM</td>\n",
+       "      <td>57.098295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>EE</td>\n",
+       "      <td>54.921547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>SK</td>\n",
+       "      <td>14.628750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>GR</td>\n",
+       "      <td>89.871308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>LT</td>\n",
+       "      <td>75.197391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>NO</td>\n",
+       "      <td>27.245778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>PT</td>\n",
+       "      <td>62.674955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>67.491168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>MK</td>\n",
+       "      <td>57.830362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>MT</td>\n",
+       "      <td>67.443496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>GI</td>\n",
+       "      <td>96.519986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>FI</td>\n",
+       "      <td>83.104320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>XK</td>\n",
+       "      <td>45.938905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>CY</td>\n",
+       "      <td>5.167064</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   iso2code      value\n",
+       "0        LV  16.762870\n",
+       "1        AL  96.941807\n",
+       "2        CH  75.718698\n",
+       "3        AT  22.460845\n",
+       "4        HR  95.490728\n",
+       "5        ES  83.668586\n",
+       "6        IS  94.655129\n",
+       "7        RO  16.668187\n",
+       "8        IT  73.774581\n",
+       "9        VA  73.399901\n",
+       "10       HU  62.612240\n",
+       "11       SE  36.068189\n",
+       "12       NL  77.763494\n",
+       "13       CZ  77.350419\n",
+       "14       DE  72.317040\n",
+       "15       FR  80.140088\n",
+       "16       ME  24.170847\n",
+       "17       BE  61.728515\n",
+       "18       SI  23.075096\n",
+       "19       LU  23.483478\n",
+       "20       IE  74.193761\n",
+       "21       BA  48.561480\n",
+       "22       MC   5.172593\n",
+       "23       BG  75.725394\n",
+       "24       PL  84.294687\n",
+       "25       LI  35.058630\n",
+       "26       GB  33.257140\n",
+       "27       RS  20.258863\n",
+       "28       SM  72.294392\n",
+       "29       DK  38.316090\n",
+       "30       IM  57.098295\n",
+       "31       EE  54.921547\n",
+       "32       SK  14.628750\n",
+       "33       GR  89.871308\n",
+       "34       LT  75.197391\n",
+       "35       NO  27.245778\n",
+       "36       PT  62.674955\n",
+       "37       AD  67.491168\n",
+       "38       MK  57.830362\n",
+       "39       MT  67.443496\n",
+       "40       GI  96.519986\n",
+       "41       FI  83.104320\n",
+       "42       XK  45.938905\n",
+       "43       CY   5.167064"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
@@ -98,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19b1a8cd",
+   "id": "5901f567",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f35facf",
+   "id": "bdc74221",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63f345d4",
+   "id": "926bd2fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b7c23db",
+   "id": "6767cf3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4424edda",
+   "id": "384cc50a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f8cb47a",
+   "id": "f322f122",
    "metadata": {},
    "outputs": [],
    "source": []
