Added yaxis_min and yaxis_max params to svgBarChart

--- a/src/vois/svgBarChartTest.ipynb
+++ b/src/vois/svgBarChartTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5aeb5a66",
+   "execution_count": 23,
+   "id": "66373019",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58295fe1b7e84c3c90f28715d6fb9bb6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "54a871a1b4924968849c067e07059677",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border='1px dashed green', height='calc(35.000000vh + 30px)', margin='0px 0px 0px 0px', w…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run svgBarChart.py\n",
     "\n",
@@ -39,7 +68,7 @@
     "                  values=values,\n",
     "                  stddevs=stddevs,\n",
     "                  selectedname='IT',\n",
-    "                  width=60.0,\n",
+    "                  width=80.0,\n",
     "                  height=35.0,\n",
     "                  fontsize=0.42,\n",
     "                  barstrokecolor='#44444400',\n",
@@ -50,8 +79,8 @@
     "                  xaxistextdisplacey=-0.2,\n",
     "                  valuestextsizemultiplier=0.7,\n",
     "                  valuestextangle=-90.0,\n",
-    "                  strokew_axis=0.05,\n",
-    "                  strokew_horizontal_lines=0.025,\n",
+    "                  strokew_axis=0.1,\n",
+    "                  strokew_horizontal_lines=0.05,\n",
     "                  showvalues=True,\n",
     "                  colorlist=px.colors.sequential.Viridis,\n",
     "                  hovercolor='blue',\n",
@@ -62,6 +91,8 @@
     "                  showselection=True,\n",
     "                  minallowed_value=0.0,\n",
     "                  maxallowed_value=1.0,\n",
+    "                  yaxis_min=0.0,\n",
+    "                  yaxis_max=1.3,\n",
     "                  on_change=on_change)\n",
     "\n",
     "display(out)"
@@ -70,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d1caefd",
+   "id": "6a7afa86",
    "metadata": {},
    "outputs": [],
    "source": []
