Changes in svgBarChart

--- a/src/vois/svgBarChartTest.ipynb
+++ b/src/vois/svgBarChartTest.ipynb
@@ -2,39 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "66373019",
+   "execution_count": null,
+   "id": "0d8f11c8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58295fe1b7e84c3c90f28715d6fb9bb6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54a871a1b4924968849c067e07059677",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(border='1px dashed green', height='calc(35.000000vh + 30px)', margin='0px 0px 0px 0px', w…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run svgBarChart.py\n",
     "\n",
@@ -76,6 +47,7 @@
     "                  xaxistextsizemultiplier=0.8,\n",
     "                  xaxistextangle=-90.0,\n",
     "                  xaxistextextraspace=1.0,\n",
+    "                  yaxistextextraspace=3.5,\n",
     "                  xaxistextdisplacey=-0.2,\n",
     "                  valuestextsizemultiplier=0.7,\n",
     "                  valuestextangle=-90.0,\n",
@@ -92,7 +64,7 @@
     "                  minallowed_value=0.0,\n",
     "                  maxallowed_value=1.0,\n",
     "                  yaxis_min=0.0,\n",
-    "                  yaxis_max=1.3,\n",
+    "                  yaxis_max=1.0,\n",
     "                  on_change=on_change)\n",
     "\n",
     "display(out)"
@@ -101,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a7afa86",
+   "id": "fca61c7b",
    "metadata": {},
    "outputs": [],
    "source": []
