Added height param to toggle

--- a/src/vois/vuetify/toggleTest.ipynb
+++ b/src/vois/vuetify/toggleTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10fccbdb",
+   "id": "d7b41f34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "t = toggle(0, ['Label1', 'Label2 is a very long label', 'Label3 is also very long'], tooltips=['Tooltip for label1'],\n",
+    "t = toggle(0, ['Label1', 'Label2 is a very long label', 'Label3 is also very long'], tooltips=['Tooltip for label1'], #xsmall=True, height=20,\n",
     "           onchange=onchange, row=False, width=250, justify='start', rounded=False, outlined=False, dark=False, paddingcol=1)\n",
     "\n",
     "display(t.draw())\n",
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "156132b4",
+   "id": "d9ebadc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99edbcc5",
+   "id": "da728d3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9116715a",
+   "id": "4744d44b",
    "metadata": {},
    "outputs": [],
    "source": []
