Added dictnames to graduatedLegend

--- a/src/vois/svgBarChartTest.ipynb
+++ b/src/vois/svgBarChartTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2aeaafa2",
+   "execution_count": 2,
+   "id": "75740507",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8842af1609ad4c55b775feb376b37e95",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3707a67658224e6293a4896f76616dea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='calc(35.000000vh + 30px)', margin='0px 0px 0px 0px', width='calc(80.000000vw + 30…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run svgBarChart.py\n",
     "\n",
@@ -38,6 +67,7 @@
     "                  names=names,\n",
     "                  values=values,\n",
     "                  stddevs=stddevs,\n",
+    "                  dictnames={'IT': 'Italy'},\n",
     "                  selectedname='IT',\n",
     "                  width=80.0,\n",
     "                  height=35.0,\n",
@@ -73,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88a43cfb",
+   "id": "5d9e62cc",
    "metadata": {},
    "outputs": [],
    "source": []
