--- a/src/vois/svgUtilsTest.ipynb
+++ b/src/vois/svgUtilsTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dcdfe65",
+   "id": "cd672599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ddd3abe6",
+   "execution_count": 4,
+   "id": "74f95cd5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e6f21e267bc4320bf5b55223699f260",
+       "model_id": "1ad593539f2e46ed81e6691373253ede",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,6 +64,8 @@
     "                      codes_selected=country_selected, stroke_selected='red', \n",
     "                      colorlist=colorlist, stdevnumber=2.0, \n",
     "                      legendtitle='2020 Total energy consumption', legendunits='KTOE per 100K inhabit.',\n",
+    "                      minallowed_value=50.0,\n",
+    "                      maxallowed_value=90.0,\n",
     "                      fontsize=18,\n",
     "                      width=240, height=600)\n",
     "display(HTML(svg))"
@@ -72,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "68dfe148",
+   "id": "b3057cb7",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "98ee5a9a",
+   "id": "1f7afcd6",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5901f567",
+   "id": "4bacadd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdc74221",
+   "id": "8724aa15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "926bd2fe",
+   "id": "97ba3586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6767cf3f",
+   "id": "97f6c27d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "384cc50a",
+   "id": "d46ecc6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f322f122",
+   "id": "cafa73ca",
    "metadata": {},
    "outputs": [],
    "source": []
