Added width param to iconButton

--- a/src/vois/vuetify/iconButtonTest.ipynb
+++ b/src/vois/vuetify/iconButtonTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c06f55",
+   "id": "f378f5c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,14 @@
     "        b.color = 'red'\n",
     "        b.tooltip = 'Make the icon yellow'\n",
     "\n",
-    "b = iconButton(onclick=onclick, tooltip='Test string for tooltip', outlined=False, rounded=True, small=False)\n",
+    "b = iconButton(onclick=onclick, tooltip='Test string for tooltip', outlined=True, rounded=True, small=False) #, width=80)\n",
     "b.draw()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b270530a",
+   "id": "bfc38ef0",
    "metadata": {},
    "outputs": [],
    "source": []
