Added argument parameter to colorPicker

--- a/src/vois/vuetify/colorPickerTest.ipynb
+++ b/src/vois/vuetify/colorPickerTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c34222e",
+   "id": "9ce88e73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "    with output:\n",
     "        print('Changed to', c.color)\n",
     "\n",
-    "c = colorPicker(color='#00AAFF', width=30, height=30, rounded=False, onchange=onchange, offset_x=True, offset_y=False)\n",
+    "c = colorPicker(color='#00AAFF', width=30, height=30, rounded=False, onchange=onchange, argument=None, offset_x=True, offset_y=False)\n",
     "\n",
     "display(c.draw())\n",
     "display(output)"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "073f7133",
+   "id": "6ffdbc94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4335f43",
+   "id": "5f587f2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68c12376",
+   "id": "81249ebd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d6b0ddf",
+   "id": "1451c5fa",
    "metadata": {},
    "outputs": [],
    "source": []
