--- a/src/vois/vuetify/palettePickerExTest.ipynb
+++ b/src/vois/vuetify/palettePickerExTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "39222034",
+   "execution_count": 2,
+   "id": "4d0743ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e64b3851c49640ab86d23556924cc794",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48b533f75cf74a83a5a702ab59812b44",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Html(children=[Select(background_color='white', chips=False, class_='pa-0 mx-0 my-1 mb-n4', cle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run palettePickerEx.py\n",
     "\n",
@@ -18,14 +47,14 @@
     "    with output:\n",
     "        print(colors,interpolate)\n",
     "\n",
-    "p = palettePickerEx(width=250, value='Turbo', interpolate=False, show_interpolate_switch=False, onchange=onchange)\n",
+    "p = palettePickerEx(width=150, value='Turbo', interpolate=False, show_interpolate_switch=False, onchange=onchange)\n",
     "p.draw()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64b1a52a",
+   "id": "e7e767c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad331e69",
+   "id": "40ebfb21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3342d41d",
+   "id": "c1504cc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a51eda",
+   "id": "7bf454b5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -64,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47bc9586",
+   "id": "f1715381",
    "metadata": {},
    "outputs": [],
    "source": []
