Solved bug in onchange of colorPicker

--- a/src/vois/vuetify/sortableListTest.ipynb
+++ b/src/vois/vuetify/sortableListTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fb7f76b3",
+   "execution_count": 8,
+   "id": "3aca41d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "15dd99c3de924f6cb94cb7396400084c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[VBox(children=(Card(children=[Col(children=[Card(children=[CardTitle(children=[Btn(children=[Ic…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Simple example\n",
     "%run sortableList.py\n",
@@ -32,16 +47,32 @@
     "        v.CardText(    class_=\"mt-n2\", children=[item['email']])\n",
     "    ]\n",
     "\n",
-    "s = sortableList(items=items, width=400, dark=False, allowNew=True, itemNew=itemNew, newOnTop=True, newButtonOnTop=False, itemContent=itemContent)\n",
+    "\n",
+    "def itemActivated(index):\n",
+    "    print(s.items[index])\n",
+    "    \n",
+    "s = sortableList(items=items, width=400, dark=False, allowNew=True, itemNew=itemNew, newOnTop=True, newButtonOnTop=False, itemContent=itemContent,\n",
+    "                activatable=False, onactivated=itemActivated)\n",
     "s.draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9fd07b2c",
+   "execution_count": 6,
+   "id": "2617d88a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Amanda Brown', 'email': 'amanda@brown.com'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s.items"
    ]
@@ -49,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "197e1fd0",
+   "id": "ea636a3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "941b7866",
+   "id": "93425cef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "684fcff8",
+   "id": "a07f5208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd067df",
+   "id": "d8bdffd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b14e1a8",
+   "id": "feecb2d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11958cfb",
+   "id": "166b8332",
    "metadata": {},
    "outputs": [],
    "source": []
