Added icon_small and icon_large to popup

--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd6b3d9e",
+   "execution_count": 35,
+   "id": "ea57bb48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce289d881700483791c9436be6ea8b99",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Menu(children=[Card(children=[Card(children=[Html(children=[CustomTreeview(color='#f8bd1a', events=['activate'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from vois.vuetify import treeview\n",
     "\n",
@@ -15,7 +30,7 @@
     "                                           rootName='All',\n",
     "                                           height='270px')\n",
     "\n",
-    "p = popup(treecard, 'Sector', icon='mdi-car', popupheight=270)\n",
+    "p = popup(treecard, 'Sector', icon='mdi-car', popupheight=270, icon_small=False, icon_large=True)\n",
     "\n",
     "p.draw()"
    ]
@@ -23,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d24d6d",
+   "id": "64a7ea9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a41253e0",
+   "id": "88aff1ee",
    "metadata": {},
    "outputs": [],
    "source": []
