Added margins and margintop to popup

--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "ea57bb48",
+   "execution_count": 8,
+   "id": "2ac35987",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce289d881700483791c9436be6ea8b99",
+       "model_id": "d9c3ec5acdfd4ecfa44ae911a2cedfa5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -30,7 +30,7 @@
     "                                           rootName='All',\n",
     "                                           height='270px')\n",
     "\n",
-    "p = popup(treecard, 'Sector', icon='mdi-car', popupheight=270, icon_small=False, icon_large=True)\n",
+    "p = popup(treecard, 'Sector', icon='mdi-car', popupheight=270, icon_small=False, icon_large=True, margintop=1)\n",
     "\n",
     "p.draw()"
    ]
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64a7ea9f",
+   "id": "a54b2982",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88aff1ee",
+   "id": "3a7cf7e1",
    "metadata": {},
    "outputs": [],
    "source": []
