Added show_close_button to popup

--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "2ac35987",
+   "execution_count": 16,
+   "id": "3875adf9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9c3ec5acdfd4ecfa44ae911a2cedfa5",
+       "model_id": "d90c9aebd8b04caab0a135003a2108bb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Menu(children=[Card(children=[Card(children=[Html(children=[CustomTreeview(color='#f8bd1a', events=['activate'…"
+       "Menu(children=[Card(children=[Row(children=[Html(children=[' '], layout=None, style_='width: 130px; height: 1p…"
       ]
      },
      "metadata": {},
@@ -30,7 +30,8 @@
     "                                           rootName='All',\n",
     "                                           height='270px')\n",
     "\n",
-    "p = popup(treecard, 'Sector', icon='mdi-car', popupheight=270, icon_small=False, icon_large=True, margintop=1)\n",
+    "p = popup(treecard, 'Sector', icon='mdi-car', popupheight=270, icon_small=False, icon_large=False, buttonheight=34, margintop=0,\n",
+    "          open_on_hover=False, close_on_click=False, close_on_content_click=False, show_close_button=True)\n",
     "\n",
     "p.draw()"
    ]
@@ -38,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a54b2982",
+   "id": "e9cd0059",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a7cf7e1",
+   "id": "4ce991dd",
    "metadata": {},
    "outputs": [],
    "source": []
