--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "3875adf9",
+   "execution_count": null,
+   "id": "7c19058a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d90c9aebd8b04caab0a135003a2108bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Menu(children=[Card(children=[Row(children=[Html(children=[' '], layout=None, style_='width: 130px; height: 1p…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from vois.vuetify import treeview\n",
     "\n",
@@ -31,7 +16,7 @@
     "                                           height='270px')\n",
     "\n",
     "p = popup(treecard, 'Sector', icon='mdi-car', popupheight=270, icon_small=False, icon_large=False, buttonheight=34, margintop=0,\n",
-    "          open_on_hover=False, close_on_click=False, close_on_content_click=False, show_close_button=True)\n",
+    "          open_on_hover=False, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
     "\n",
     "p.draw()"
    ]
@@ -39,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9cd0059",
+   "id": "9132c1e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ce991dd",
+   "id": "148ccdb8",
    "metadata": {},
    "outputs": [],
    "source": []
