Allow for icon only popup buttons

--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c19058a",
+   "execution_count": 37,
+   "id": "6b30831f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d185c1bbf9564eb690a4c139efb83072",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Menu(children=[Card(children=[Row(children=[Html(children=['Select a sector:'], class_='pa-0 ma-1', layout=Non…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "# Icon-only popup\n",
     "from vois.vuetify import treeview\n",
     "\n",
     "%run popup.py\n",
@@ -15,7 +31,45 @@
     "                                           rootName='All',\n",
     "                                           height='270px')\n",
     "\n",
-    "p = popup(treecard, 'Sector', icon='mdi-car', popupheight=270, icon_small=False, icon_large=False, buttonheight=34, margintop=0,\n",
+    "p = popup(treecard, '', icon='mdi-car', popupheight=270, icon_small=False, icon_large=False, \n",
+    "          rounded=True, outlined=False, margintop=0, text=True, buttonwidth=34, buttonheight=34, \n",
+    "          open_on_hover=False, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
+    "\n",
+    "p.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1227c4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1bac9c8b4654f278571b91ff569b53c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Menu(children=[Card(children=[Row(children=[Html(children=['Select a sector:'], class_='pa-0 ma-1', layout=Non…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Text only popup\n",
+    "from vois.vuetify import treeview\n",
+    "\n",
+    "%run popup.py\n",
+    "\n",
+    "treecard = treeview.createTreeviewFromList(['S%d'%x for x in range(10)],\n",
+    "                                           rootName='All',\n",
+    "                                           height='270px')\n",
+    "\n",
+    "p = popup(treecard, 'Sector',popupheight=270, buttonheight=34, margintop=0,\n",
     "          open_on_hover=False, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
     "\n",
     "p.draw()"
@@ -24,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9132c1e9",
+   "id": "d17d0bf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "148ccdb8",
+   "id": "83843885",
    "metadata": {},
    "outputs": [],
    "source": []
