Added dayCalendar widget

--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -76,6 +76,14 @@ datePicker widget
 
 .. image:: figures/line.png
 
+dayCalendar widget
+------------------
+
+.. automodule:: dayCalendar
+    :members:
+
+.. image:: figures/line.png
+
 dialogGeneric widget
 --------------------
 
