--- a/src/vois/vuetify/datePickerTest.ipynb
+++ b/src/vois/vuetify/datePickerTest.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "47ec95af",
+   "execution_count": 1,
+   "id": "e24938ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6459fc868f1e4eada1ed1f8d7d7695e0",
+       "model_id": "0f517548c59e440c91f7662bfe09a34d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Menu(children=[DatePicker(color='#f8bd1a', dark=False, header_color='#f8bd1a', max='2022-11-06', min='2022-10-…"
+       "Menu(children=[DatePicker(color='#f8bd1a', dark=False, header_color='#f8bd1a', layout=None, max='2023-11-02', …"
       ]
      },
      "metadata": {},
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f83cc873bca64d3683845f260220d303",
+       "model_id": "0ea6c86686144e74ae04ec975e790bfb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0fc869c4",
+   "id": "bbbc4588",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c5944e90",
+   "id": "98dbb85c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "62ddec6f",
+   "id": "65dc9682",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f26f455",
+   "id": "a87a6ef1",
    "metadata": {},
    "outputs": [],
    "source": []
